--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web3-plugin-1inch",
   "version": "1.0.0",
-  "description": "Plugin that adds Aggregated Swap functionality using 1inch Network",
+  "description": "Plugin that adds Aggregated Swap functionality using 1inch Aggregated Network",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "homepage": "https://github.com/Architsharma7/web3-plugin-1inch#readme",
