--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web3-plugin-1inch",
   "version": "1.0.0",
-  "description": "Plugin that adds Aggregated Swap functionality using 1inch Aggregated Network",
+  "description": "Plugin that adds Aggregated Swap functionality using 0x Aggregated Network",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "homepage": "https://github.com/Architsharma7/web3-plugin-1inch#readme",
@@ -21,11 +21,15 @@
     "type": "git",
     "url": "https://github.com/Architsharma7/web3-plugin-1inch"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@0x/contract-wrappers": "^13.23.8",
+    "qs": "^6.11.2"
+  },
   "devDependencies": {
     "@chainsafe/eslint-config": "^2.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.2.6",
+    "@types/qs": "^6.9.11",
     "eslint": "8",
     "jest": "^29.5.0",
     "jest-extended": "^4.0.0",
