--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web3-plugin-1inch",
+  "name": "web3-plugin-0x",
   "version": "1.0.0",
   "description": "Plugin that adds Aggregated Swap functionality using 0x Aggregated Network",
   "main": "lib/index.js",
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "@chainsafe/eslint-config": "^2.0.0",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.2.6",
     "@types/qs": "^6.9.11",
     "eslint": "8",
@@ -35,7 +35,7 @@
     "jest-extended": "^4.0.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3",
+    "typescript": "^5.3.3",
     "web3": "^4.2.2"
   },
   "peerDependencies": {
