--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
 		"strict": true,
 		"strictNullChecks": true,
 		"outDir": "lib",
-		"esModuleInterop": true
+		"esModuleInterop": true,
 	},
 	"include": ["src", "test"],
 	"exclude": ["node_modules"]
