--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Plugin that adds Aggregated Swap functionality using 0x Aggregated Network",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "homepage": "https://github.com/Architsharma7/web3-plugin-1inch#readme",
+  "homepage": "https://github.com/Architsharma7/web3-plugin-0x#readme",
   "bugs": {
-    "url": "https://github.com/Architsharma7/web3-plugin-1inch/issues"
+    "url": "https://github.com/Architsharma7/web3-plugin-0x/issues"
   },
   "scripts": {
     "lint": "eslint '{src,test}/**/*.ts'",
@@ -14,12 +14,12 @@
     "test": "jest --config=./test/jest.config.js"
   },
   "contributors": [
-    "Archit Sharma"
+    "Archit Sharma <architsharma711@gmail.com>"
   ],
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Architsharma7/web3-plugin-1inch"
+    "url": "https://github.com/Architsharma7/web3-plugin-0x"
   },
   "dependencies": {
     "@0x/contract-wrappers": "^13.23.8",
